check2.log
cargo :     Checking to
posynth v0.1.0 (E:\Proj
ects\toposynth)
発生場所 行:1 文字:1
+ cargo check > check.l
og 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (    Checking    
 to...ects\toposynt    
h):String) [], Rem    o
teException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
warning: unused import:
 `ParamEvent`
 --> src\editor.rs:4:44
  |
4 | use nih_plug_vizia:
:widgets::{ParamSlider,
 ParamEvent};
  |                    
                       
 ^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of `
#[warn(unused)]`) on by
 default

error[E0599]: no method
 named `cmp_eq` found f
or struct `wide::f32x8`
 in the current scope
   --> src\lib.rs:407:3
5
    |
407 |                  
   let clean = v.cmp_eq
(v).blend(v, zero); // 
NaN guard
    |                  
                 ^^^^^^
    |
   ::: C:\Users\kouno\.
cargo\registry\src\inde
x.crates.io-1949cf8c6b5
b557f\wide-0.7.33\src\l
ib.rs:883:6
    |
883 |   fn cmp_eq(self,
 rhs: Rhs) -> Self::Out
put;
    |      ------ the m
ethod is available for 
`wide::f32x8` here
    |
    = help: items from 
traits can only be used
 if the trait is in sco
pe
help: trait `CmpEq` whi
ch provides `cmp_eq` is
 implemented but not in
 scope; perhaps you wan
t to import it
    |
  1 + use wide::CmpEq;
    |
help: there is a method
 `cmp_ge` with a simila
r name
    |
407 -                  
   let clean = v.cmp_eq
(v).blend(v, zero); // 
NaN guard
407 +                  
   let clean = v.cmp_ge
(v).blend(v, zero); // 
NaN guard
    |

warning: variable does 
not need to be mutable
  --> src\editor.rs:13:
9
   |
13 |     let mut set_fl
oat = |param: &FloatPar
am, val: f32| {
   |         ----^^^^^^
^^^
   |         |
   |         help: remo
ve this `mut`
   |
   = note: `#[warn(unus
ed_mut)]` (part of `#[w
arn(unused)]`) on by de
fault

For more information ab
out this error, try `ru
stc --explain E0599`.
warning: `toposynth` (l
ib) generated 2 warning
s
error: could not compil
e `toposynth` (lib) due
 to 1 previous error; 2
 warnings emitted
